--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
-  "name": "Mastodon as a Sidebar",
-  "description": "Displays a sidebar that lets you talk to your friends using Mastodon.",
+  "name": "Phanpy as a Sidebar",
+  "description": "Displays a sidebar that lets you connect to Mastodon using Phanpy.",
   "version": "2.2",
   "applications": {
     "gecko": {
-      "strict_min_version": "54.0a1"
+      "strict_min_version": "2024.03.12.e73ae56"
     }
   },
   "icons": {
@@ -16,7 +16,7 @@
       "suggested_key": {
         "default": "Alt+Shift+M"
       },
-      "description": "Opens and closes Mastodon sidebar"
+      "description": "Opens and closes Phanpy sidebar"
     }
   },
   "sidebar_action": {
