--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "manifest_version": 1,
+  "manifest_version": 2,
   "name": "Phanpy as a Sidebar",
   "description": "Displays a sidebar that lets you connect to Mastodon using Phanpy.",
   "version": "0.1",
   "applications": {
     "gecko": {
-      "strict_min_version": "78"
+      "strict_min_version": "54.0a1"
     }
   },
   "icons": {
