--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "0.1",
   
   "icons": {
-    "48": "icons/icon48.png"
+    "48": "icons/icon48.png",
+    "512": "icons/icon512.png"
   },
   
   "commands": {
@@ -16,14 +17,12 @@
       "description": "Opens and closes Phanpy sidebar"
     }
   },
-  
-  "sidebar_action": {
-    "default_icon": {
-      "512": "icons/icon512.png"
-    },
-    "default_title": "Mastodon",
-    "default_panel": "index.html"
-  },
+
+"sidebar_action": {
+  "default_title": "Phanpy",
+  "default_panel": "index.html",
+  "default_icon": "icons/icon48.png"
+},
   
   "background": {
     "scripts": [
